# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.932 2009-07-16 16:14:19 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta6 (2009/07/??)
 - (2009/07/16) Fixed bug# 3997 - Wrong named variable in AgentTicketZoom.
 - (2009/07/16) Fixed bug# 3993 - Error message about wrong email adress
    not visible in AgentTicketPhone and AgentTicketEmail if AutoComplete
    is enabled.
 - (2009/07/16) Fixed bug# 3994 - It's possible to create an email ticket
    for internal queues.
 - (2009/07/15) Fixed bug# 3663 - Responsible Notification does not happen
    for pending reached.
    Added config optio to be compat. to old OTRS versions.

    -->> SysConfig -> Ticket -> Core::Ticket ->
             Ticket::PendingNotificationNotToResponsible <<--

 - (2009/07/15) Updated Italian translation, thanks to Giordano Bianchi,
    Emiliano Coletti and Alessandro Faraldi!
 - (2009/07/14) Fixed bug# 3983 - bin/PendingJobs.pl is not sendign reminder
    email (Error Message: Message: Need RecipientID!).
 - (2009/07/14) Fixed bug# 3977 - Tags of auto responses get not replaced.
 - (2009/07/14) Fixed bug# 3960 - Split function does not use RichText content
    from original article for new article.
 - (2009/07/14) Fixed bug# 3976 - AgentTicketBounce does not work when
    Frontend::RichText is disabled.
 - (2009/07/13) Updated Russian translation, thanks to Mike Lykov!
 - (2009/07/13) Updated Italian translation, thanks to Remo Catelotti!
 - (2009/07/13) Fixed bug# 3975 - New Dashboard Featrue: SQL of Upcoming Events
    (for pending remidner time) is not using database index, index on
    until_time is missing. Use scripts/DBUpdate-to-2.4.*.sql for upgrading.
 - (2009/07/13) Fixed bug# 3972 - Sub Kernel::System::TicketOwnerCheck() gives